# tzs-personal-assistant-telegram-bot

./: .gitignore  README.md  pyproject.toml
infra/environments/bootstrap/: main.tf  variables.tf
infra/environments/dev/: main.tf  outputs.tf  variables.tf
infra/modules/bedrock_agentcore/agent_memory/: main.tf  output.tf  variables.tf
infra/modules/bedrock_agentcore/agent_runtime/: main.tf  outputs.tf  variables.tf
infra/modules/bedrock_agentcore/agentcore_runtime/: main.tf  variables.tf
infra/modules/ecr/: main.tf  outputs.tf  variables.tf
infra/modules/ecr_image/: main.tf  outputs.tf  variables.tf
infra/modules/lambda/webhook/: main.tf  output.tf  variables.tf
scripts/: configure_telegram_webhook.py  run_bootstrap.sh  run_build_dev.sh
src/: schemas.py
src/agent_runtime/: Dockerfile  agent.py  requirements.txt
src/agentcore/router_agent/: Dockerfile
src/lambda/webhook/: Dockerfile  handler.py
src/lambdas/webhook/: Dockerfile
src/shared/: agentcore_memory.py  schemas.py
src/summarizer_agent/: agent.py  requirements.txt
src/webhook_lambda/: Dockerfile  handler.py
tests/: test_webhook_handler.py
